# Finitewave

./: .gitignore  LICENSE  README.md  README.rst  mkdocs.yml  playground.ipynb  pyproject.toml  setup.py  swcore.txt  temp.py
_examples/: simple_example.py
_examples/tools/: planar_wave_velocity.py  vtk_mesh_builder.py
docs/: api.md  conf.py  generate_api.py  getting_started.md  index.md  index.rst  overview.md  sg_execution_times.rst
docs/_static/: custom.css  logo.tiff
docs/api/: ActionPotential2DTracker.md  ActivationTime2DTracker.md  AlievPanfilov2D.md  AlievPanfilovKernels2D.md  Animation2DTracker.md  AnimationBuilder.md  AsymmetricStencil2D.md  CardiacTissue2D.md  Diffuse2DPattern.md  DriftVelocityCalculation.md  ECG2DTracker.md  FibrosisPattern.md  IncorrectWeightsModeError2D.md  IsotropicStencil2D.md  LuoRudy912D.md  LuoRudy91Kernels2D.md  MultiActivationTime2DTracker.md  MultiVariable2DTracker.md  Period2DTracker.md  Period3DTracker.md  PeriodMap2DTracker.md  PotentialPeriodAnimationBuilder.md  ScarGauss2DPattern.md  ScarRect2DPattern.md  Spiral2DTracker.md  StimCurrentCoord2D.md  StimCurrentMatrix2D.md  StimVoltageCoord2D.md  StimVoltageMatrix2D.md  StimVoltageMatrix3D.md  Structural2DPattern.md  TP062D.md  TP06Kernels2D.md  VTKMeshBuilder.md  Variable2DTracker.md  Velocity2DTracker.md  Velocity3DTracker.md  VisMeshBuilder3D.md
docs/api-reference/: generate_api_reference.py
docs/auto_examples/: index.rst
docs/documentation/: core.rst  cpuwave2D.rst  cpuwave3D.rst  index.rst  tools.rst
docs/usage/: advanced.rst  installation.rst  plot_quick_start.codeobj.json  plot_quick_start.ipynb  (+3 more)
examples/: README.md  README.rst  act_time_3d_tracker.py  aliev_panfilov_3D_ventricle.py  animation_2d_tracker.py  animation_3D_tracker.py  animation_slice_3d_tracker.py  commands_interruption.py  complex_geometry_2D.py  matrix_ventricle_stimulation_3D.py  mult_act_time_2d_tracker.py  period_2d_tracker.py  period_3d_tracker.py  period_map_2d_tracker.py  plot_act_pot_3d_tracker.py  plot_act_time_2d_tracker.py  plot_aliev_panfilov_2D_aniso.py  plot_aliev_panfilov_2D_conductivity.py  plot_aliev_panfilov_2D_iso.py  plot_aliev_panfilov_3D_aniso.py  plot_aliev_panfilov_3D_iso.py  plot_ecg_2d_tracker.py  plot_ecg_3d_tracker.py  plot_matrix_area_activation.py  plot_multi_variable_2d_tracker.py  plot_tips_2d_tracker.py  plot_tp06_fibrosis_2D.py  plot_using_states.py  sequential_stimulation.py  tips_3d_tracker.py  tp06_fibrosis_3D_ventricle.py  velocity_2d_tracker.py  vtk_frame_3d_tracker.py  vtk_mesh_builder.py
finitewave/: README.md  README.rst  __init__.py
finitewave.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
site/: 404.html  generate_api.py  index.html  objects.inv
state/: u.npy  v.npy
tests/: test_aliev_panfilov_2d.py  test_aliev_panfilov_2d_rectangle.py  test_aliev_panfilov_3d.py  test_fibrosis_generation_2d.py  test_luo_rudy91_2d.py  test_multi_act_time.py  test_tp06_2d.py
(+544 files in other folders)
