[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "finitewave"
version = "0.8"
authors = [
  { name="Timur Nezlobinsky", email="nezlobinsky@gmail.com" },
  { name="Arstanbek Okenov", email="arstanbek.okenov@ugent.be" }
]
description = "Simple package for a wide range of tasks in modeling cardiac electrophysiology using finite-difference methods."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
]
dependencies = [
  "matplotlib==3.7.1",
  "natsort==8.4.0",
  "numba==0.60.0",
  "numpy<2",
  "pyvista==0.44.1",
  "scipy==1.14.1",
  "setuptools==59.6.0",
  "scikit-image",
  "tqdm==4.64.1",
  "vtk==9.2.6",
]

[project.optional-dependencies]
dev = [
    "mkdocs",
    "mkdocstrings[python]",
    "mkdocs-material",
    "mkdocs-gallery",
    "mkdocs-gen-files",
    "mkdocs-literate-nav",
    "mkdocs-section-index",
]
